addons/n8n/prd/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  annotations:
    external-dns.alpha.kubernetes.io/hostname: n8n.digitalview.com.br
    kubernetes.io/ingress.class: gce
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: n8n.digitalview.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
  tls:
    - hosts:
        - n8n.digitalview.com.br
      secretName: n8n-tls
